Update kube, etcd

--- a/docker-clean.yml
+++ b/docker-clean.yml
@@ -20,7 +20,7 @@ spec:
             path: /var/run/docker.sock
       containers:
       - name: k8s-cleanup
-        image: onfido/k8s-cleanup
+        image: ziwon/k8s-cleanup
         imagePullPolicy: Always
         resources:
           requests:
