--- a/k8s-clean.yml
+++ b/k8s-clean.yml
@@ -22,7 +22,7 @@ spec:
           serviceAccountName: k8s-cleanup
           containers:
             - name: k8s-cleanup
-              image: onfido/k8s-cleanup
+              image: ziwon/k8s-cleanup
               command: ["/bin/bash", "/bin/k8s-clean.sh"]
               imagePullPolicy: Always
               resources:
